--- a/src/app.component.html
+++ b/src/app.component.html
@@ -1,9 +1,8 @@
 <!-- nav -->
-<nav class="navbar navbar-expand navbar-dark bg-dark px-3">
+<nav class="navbar navbar-expand navbar-dark bg-dark px-3" *ngIf="user">
   <div class="navbar-nav">
-    <a class="nav-item nav-link" routerLink="/">Home</a>
-    <a class="nav-item nav-link" routerLink="/account/login">Login</a>
-    <a class="nav-item nav-link" routerLink="/account/register">Register</a>
+      <a class="nav-item nav-link" routerLink="/">Home</a>
+      <button class="btn btn-link nav-item nav-link" (click)="logout()">Logout</button>
   </div>
 </nav>
 
