list of all starships is OK

--- a/src/app/starship/starships/starships.component.html
+++ b/src/app/starship/starships/starships.component.html
@@ -1,6 +1,7 @@
 <h2>Listado de Naves</h2>
 <ul>
-  <li *ngFor="let starship of starships$ | async">
+  <li *ngFor="let starship of starships.results">
     {{ starship.name }}
+    {{ starship.model }}
   </li>
 </ul>
