--- a/src/app/starship/starships/starships.component.html
+++ b/src/app/starship/starships/starships.component.html
@@ -1,5 +1,5 @@
 <div class="starships-container">
-  <h2>Starship Lists</h2>
+  <!-- <h1 class="text-center">Starship Lists</h1> -->
   <ul *ngFor="let starship of starships.results">
     <li class="list-group-item">
       <b>{{ starship.name }}</b>
