--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+  background-color: #0a0b0b;
+}
+
+.a-color {color: #aaaaaa;}
