--- a/src/app.component.html
+++ b/src/app.component.html
@@ -1,6 +1,9 @@
-
-
 <div class="container header-container">
+  <div class="container d-flex align-items-center justify-content-center"><img
+    src="/assets/Captura de pantalla 2023-07-11 101021.png"
+    alt="starwars-logo"
+  /></div>
+
   <header
     class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom"
   >
@@ -19,28 +22,26 @@
     </div>
 
     <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-      <li><a class="nav-item nav-link a-color" routerLink="/">Home</a></li>
+      <li><a class="nav-item nav-link navbar-links" routerLink="/">Home</a></li>
       <li>
-        <a class="nav-item nav-link a-color" routerLink="/starships">Starships</a>
+        <a class="nav-item nav-link navbar-links" routerLink="/starships"
+          >Starships</a
+        >
       </li>
     </ul>
 
     <div class="col-md-3 text-end" *ngIf="user">
       <button
         type="button"
-        class="btn  me-2 a-color"
+        class="btn me-2 account-buttons"
         routerLink="/account/login"
       >
         Login
       </button>
-      <button
-        type="button"
-        class="btn  a-color"
-        routerLink="/account/register"
-      >
+      <button type="button" class="btn account-buttons" routerLink="/account/register">
         Sign-up
       </button>
-      <button type="button" class="btn mx-2 a-color" (click)="logout()">
+      <button type="button" class="btn mx-2 account-buttons" (click)="logout()">
         Logout
       </button>
     </div>
