--- a/src/styles.css
+++ b/src/styles.css
@@ -3,4 +3,7 @@ body {
   background-color: #0a0b0b;
 }
 
-.a-color {color: #aaaaaa;}
+.account-buttons {color: #aaaaaa;}
+.account-buttons:hover {color: #aaaaaa;}
+.navbar-links {color: #aaaaaa;}
+.navbar-links :hover  {color: #aaaaaa;}
