--- a/src/app/ficha/ficha.component.html
+++ b/src/app/ficha/ficha.component.html
@@ -1,5 +1,33 @@
-<div class="container-fluid" *ngFor="let starship of starships.results">
-  <li class="list-group-item">
-    <b>{{ starships.results.name }}</b>
-  </li>
-</div>
+<ng-template #content let-modal>
+  <div class="container d-flex">
+    <div class="modal-body d-flex justify-content-center align-items-center">
+      Indicar el número de páginas
+    </div>
+  </div>
+  <div class="d-flex justify-content-center align-items-center mb-3">
+    <button type="button" class="btn btn-success" (click)="modal.close()">
+      OK
+    </button>
+  </div>
+</ng-template>
+
+
+<button
+  type="button"
+  class="btn btn-outline-danger ms-3"
+  (click)="openBackground(content)"
+>
+  <svg
+    xmlns="http://www.w3.org/2000/svg"
+    width="16"
+    height="16"
+    fill="currentColor"
+    class="bi bi-info-circle-fill"
+    viewBox="0 0 16 16"
+  >
+    <path
+      d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm.93-9.412-1 4.705c-.07.34.029.533.304.533.194 0 .487-.07.686-.246l-.088.416c-.287.346-.92.598-1.465.598-.703 0-1.002-.422-.808-1.319l.738-3.468c.064-.293.006-.399-.287-.47l-.451-.081.082-.381 2.29-.287zM8 5.5a1 1 0 1 1 0-2 1 1 0 0 1 0 2z"
+    ></path>
+  </svg>
+  Info
+</button>
