fixed error in console

--- a/src/app/starship/starships/starship.component.css
+++ b/src/app/starship/starships/starship.component.css
@@ -7,3 +7,10 @@
   background-color: #0a0b0b;
   color: #aaaaaa;
 }
+
+ul li {
+  background-color: #0a0b0b;
+  color: #aaaaaa;
+  border: none;
+}
+
