--- a/src/app/starship/starships/starships.component.html
+++ b/src/app/starship/starships/starships.component.html
@@ -1,12 +1,11 @@
-<div class="starships-container" >
-  <ul *ngFor="let starship of starships.results">
-    <li class="list-group-item">
-      <b>{{ starship.name }}</b>
-    </li> <app-ficha ></app-ficha>
-    <li class="list-group-item">{{ starship.model }}</li>
-    <li class="list-group-item">
-      <!-- <button class="btn btn-primary" (click)="fichaComponent.open(content)">Ver Ficha</button> -->
-    </li>
-  </ul>
-
+<div>
+  <div class="starships-container">
+    <ul class="list-group m-3" *ngFor="let starship of starships.results">
+      <li class="list-group-item">
+        <b> {{ starship.name }} </b>
+      </li>
+      <li class="list-group-item">{{ starship.model }}</li>
+      <li class="list-group-item"><app-ficha></app-ficha></li>
+    </ul>
+  </div>
 </div>
