--- a/src/app/ficha/ficha.component.html
+++ b/src/app/ficha/ficha.component.html
@@ -1,7 +1,9 @@
 <ng-template #content let-modal>
   <div class="container d-flex">
     <div class="modal-body d-flex justify-content-center align-items-center">
-      Indicar el número de páginas
+      <div *ngFor="let starship of starships.results">
+        {{ starship[0].name }}
+      </div>
     </div>
   </div>
   <div class="d-flex justify-content-center align-items-center mb-3">
