eliminated useless methods

--- a/src/app/starship/starships/starships.component.html
+++ b/src/app/starship/starships/starships.component.html
@@ -1,6 +1,6 @@
 <div>
   <div class="starships-container">
-    <ul class="list-group m-3" *ngFor="let starship of starships">
+    <ul class="list-group m-3" *ngFor="let starship of starships.results">
       <li class="list-group-item">
         <b> {{ starship.name }} </b>
       </li>
