--- a/src/app/ficha/ficha.component.html
+++ b/src/app/ficha/ficha.component.html
@@ -1,9 +1,10 @@
 <ng-template #content let-modal>
   <div class="container d-flex">
     <div class="modal-body d-flex justify-content-center align-items-center">
-      <div *ngFor="let starship of starships.results">
+      <!-- <div *ngFor="let starship of starships.results">
         {{ starship[0].name }}
-      </div>
+      </div> -->
+      <div><p>hello from modal</p></div>
     </div>
   </div>
   <div class="d-flex justify-content-center align-items-center mb-3">
@@ -13,12 +14,10 @@
   </div>
 </ng-template>
 
-
 <button
   type="button"
   class="btn btn-outline-warning ms-3"
   (click)="openBackground(content)"
 >
-
   ver ficha
 </button>
