Ver Ficha funciona

--- a/src/app/ficha/ficha.component.html
+++ b/src/app/ficha/ficha.component.html
@@ -1,23 +1,4 @@
-<ng-template #content let-modal>
-  <div class="container d-flex">
-    <div class="modal-body d-flex justify-content-center align-items-center">
-      <!-- <div *ngFor="let starship of starships.results">
-        {{ starship[0].name }}
-      </div> -->
-      <div><p>hello from modal</p></div>
-    </div>
-  </div>
-  <div class="d-flex justify-content-center align-items-center mb-3">
-    <button type="button" class="btn btn-success" (click)="modal.close()">
-      OK
-    </button>
-  </div>
-</ng-template>
-
-<button
-  type="button"
-  class="btn btn-outline-warning ms-3"
-  (click)="openBackground(content)"
->
-  ver ficha
-</button>
+<div id="section1 " style="background-color: yellow;">
+  <h1>Contenido de la sección específica</h1>
+  <h1>Contenido de la sección específica</h1>
+</div>
