--- a/src/app/ficha/ficha.component.html
+++ b/src/app/ficha/ficha.component.html
@@ -1,4 +1,7 @@
-<div id="section1 " style="background-color: yellow;">
+<div id="section1" style="background-color: yellow">
   <h1>Contenido de la sección específica</h1>
+</div>
+
+<div id="section2" style="background-color: pink">
   <h1>Contenido de la sección específica</h1>
 </div>
