created new array with id field

--- a/src/app/starship/starships/starships.component.html
+++ b/src/app/starship/starships/starships.component.html
@@ -6,7 +6,7 @@
       </li>
       <li class="list-group-item">{{ starship.model }}</li>
       <li class="list-group-item">
-        <a class="btn btn-primary" [routerLink]="['/ficha']" >
+        <a class="btn btn-primary" [routerLink]="['/starships', starship.id]" >
           Ver Ficha
         </a>
 
