--- a/src/app/ficha/ficha.component.html
+++ b/src/app/ficha/ficha.component.html
@@ -1,4 +1,4 @@
 <div *ngIf="starship" style="background-color: antiquewhite">
-  <h2>Starhip Name{{ starship.name }}</h2>
-  <p>Modelo: {{ starship.model }}</p>
+  <h2>Name: {{ starship.name }}</h2>
+  <p>Model: {{ starship.model }}</p>
 </div>
