--- a/src/app/starship/starships/starships.component.html
+++ b/src/app/starship/starships/starships.component.html
@@ -1,12 +1,16 @@
 <div>
   <div class="starships-container">
     <ul class="list-group m-3" *ngFor="let starship of starships">
-      <a class="text-decoration-none hover-effect" [routerLink]="['/starships', starship.id  ]">
-        <h3 class="text-warning"><b>{{ starship.name }}</b></h3>
-      </a>
+      <div  class="starship-div"><a
+        class="text-decoration-none hover-effect"
+        [routerLink]="['/starships', starship.id]"
+      >
+        <h3 class="text-warning">
+          <b>{{ starship.name }}</b>
+        </h3>
+      </a></div>
       <li class="list-group-item">{{ starship.model }}</li>
       <li class="list-group-item">
-
         <router-outlet></router-outlet>
       </li>
     </ul>
