--- a/src/app/ficha/ficha.component.html
+++ b/src/app/ficha/ficha.component.html
@@ -1,4 +1,92 @@
-<div *ngIf="starship" style="background-color: antiquewhite">
+<!-- <div *ngIf="starship" style="background-color: antiquewhite">
   <h2>Name: {{ starship.name }}</h2>
   <p>Model: {{ starship.model }}</p>
+</div> -->
+
+<div class="row">
+  <div class="col-12 d-flex justify-content-center py-3">
+    <div
+      class="card back-image text-white"
+      style="border: 3px solid rgb(255, 0, 234)"
+    >
+      <div class="card-body py-0" style="border: 3px solid rgb(0, 255, 30)">
+        <div class="row">
+          <div class="col-12 d-flex justify-content-center">
+            <div class="card border-0 card-child">
+              <div class="card-body text-center py-0">
+                <h3 class="py-0">{{ starship.name }}</h3>
+                <!-- <img
+                  src="{{ urlImg }}/{{ id }}.jpg"
+                  Onerror="this.src='https://starwars-visualguide.com/assets/img/big-placeholder.jpg'"
+                  class="card-img-top"
+                  alt="{{ starship.name }}"
+                /> -->
+                <img [src]="sanitizaImage(imagesURL)" alt="Starship Image"  [alt]="starship.name" (error)="getErrorImage()"/>
+                <p>{{ imagesURL }}</p>
+
+                <p class="p-0 m-0 card-text">
+                  <strong>MODEL:</strong> {{ starship.model }}
+                </p>
+                <p class="p-0 m-0 card-text">
+                  <strong>STARSHIP CLASS:</strong>
+                  {{ starship.starship_class }}
+                </p>
+                <p class="p-0 m-0 card-text">
+                  <strong>MANUFACTURER:</strong> {{ starship.manufacturer }}
+                </p>
+                <p class="p-0 m-0 card-text">
+                  <strong>COST:</strong>
+                  {{ starship.cost_in_credits }} credits
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- A partir de aqui vienen las tarjetas pequeñas-->
+      <div class="row" style="border: 5px solid blue">
+        <div class="col-12 col-md-6 px-0">
+          <div class="card border-0 card-child" card-child>
+            <div class="card-body">
+              <p class="p-0 m-0 card-text">
+                <strong>CREW:</strong> {{ starship.crew }}
+              </p>
+              <p class="p-0 m-0 card-text">
+                <strong>PASSENGER CAPACITY:</strong>
+                {{ starship.passengers }}
+              </p>
+              <p class="p-0 m-0 card-text">
+                <strong>CARGO CAPACITY:</strong>
+                {{ starship.cargo_capacity }} tons
+              </p>
+              <p class="p-0 m-0 card-text">
+                <strong>CONSUMABLES:</strong> {{ starship.consumables }}
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-6 px-0">
+          <div class="card border-0 card-child">
+            <div class="card-body">
+              <p class="p-0 m-0 card-text">
+                <strong>LENGTH:</strong> {{ starship.length }}
+              </p>
+              <p class="p-0 m-0 card-text">
+                <strong>MAXIMUM ATMOSPHERING SPEED:</strong>
+                {{ starship.max_atmosphering_speed }} KM/H
+              </p>
+              <p class="p-0 m-0 card-text">
+                <strong>HIPERDRIVE RATING:</strong>
+                {{ starship.hyperdrive_rating }}
+              </p>
+              <p class="p-0 m-0 card-text">
+                <strong>MAXIMUN SPEED IN REALSPACE:</strong>
+                {{ starship.MGLT }} MGLT
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
