--- a/src/app/starship/starships/starship.component.css
+++ b/src/app/starship/starships/starship.component.css
@@ -22,5 +22,11 @@ ul li {
   padding-bottom: 17px;
   padding-left: 10px;
   padding-right: 10px;
-  width: 100%;
+
+}
+
+.starship-model {   background-color: #151515;
+  color: #aaaaaa;
+  border: none;
+
 }
