--- a/src/styles.css
+++ b/src/styles.css
@@ -5,5 +5,8 @@ body {
 
 .account-buttons {color: #aaaaaa;}
 .account-buttons:hover {color: #aaaaaa;}
-.navbar-links {color: #aaaaaa;}
+
 .navbar-links:hover  {color: #aaaaaa;}
+.nav-links {color: #B5B7B7;}
+
+
