--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,13 @@
+<div class="container-fluid text-center text-white">
+  <h1 class="mb-3">Home Component</h1>
+  <p>
+    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Inventore illo
+    iusto beatae dolor nostrum! Qui totam perferendis suscipit dignissimos
+    beatae, quisquam facilis nesciunt ipsum officia, blanditiis esse cupiditate.
+    Doloremque, tempore.
+  </p>
 
+  <button type="button" class="btn btn-warning" [routerLink]="'/starships'">
+    Ir a Starships
+  </button>
+</div>
