home comoponent modified

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid text-center text-white">
   <h1 class="mb-3">Home Component</h1>
-  <p>
+  <p class="slide-up-effect">
     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Inventore illo
     iusto beatae dolor nostrum! Qui totam perferendis suscipit dignissimos
     beatae, quisquam facilis nesciunt ipsum officia, blanditiis esse cupiditate.
