final stylying almost done

--- a/src/app.component.html
+++ b/src/app.component.html
@@ -26,14 +26,10 @@
     <ng-container *ngIf="user">
       <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
         <li>
-          <a class="nav-item nav-link custom-color" routerLink="/"
-            >Home</a
-          >
+          <a class="nav-item nav-link custom-color" routerLink="/">Home</a>
         </li>
         <li>
-          <a
-            class="nav-item nav-link custom-color"
-            routerLink="/starships"
+          <a class="nav-item nav-link custom-color" routerLink="/starships"
             >Starships</a
           >
         </li>
