--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,13 +1,24 @@
-<div class="container-fluid text-center text-white">
-  <h1 class="mb-3">Home Component</h1>
-  <p class="slide-up-effect">
-    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Inventore illo
-    iusto beatae dolor nostrum! Qui totam perferendis suscipit dignissimos
-    beatae, quisquam facilis nesciunt ipsum officia, blanditiis esse cupiditate.
-    Doloremque, tempore.
-  </p>
+<div class="container-fluid text-center text-warning mb-3">
+  <h3 class="slide-up-effect">
+    In a galaxy far, far away... Long ago, in a remote corner of the universe,
+    an epic battle between good and evil unfolded. The Jedi, warriors trained in
+    the mastery of the Force, fought for peace and justice in the galaxy.
+    Opposing them were the Sith, masters of the dark side of the Force, seeking
+    power and domination. Amidst this conflict, a young farmer named Luke
+    Skywalker embarked on an unexpected adventure that would lead him to
+    discover his true heritage and his destiny as the last Jedi. With the
+    guidance of Obi-Wan Kenobi and the wisdom of Yoda, Luke became the galaxy's
+    last hope. Throughout his journey, Luke encountered a diverse crew of allies
+    and friends, such as the brave Princess Leia, the cunning smuggler Han Solo,
+    and his loyal co-pilot, Chewbacca. Together, they formed the Rebel Alliance
+    to confront the fearsome Galactic Empire, led by the wicked Emperor
+    Palpatine and his apprentice, Darth Vader. With thrilling space battles,
+    lightsaber duels, and unforgettable characters, Star Wars is a saga that has
+    captivated generations and left an indelible mark on popular culture. May
+    the Force be with you... always.
+  </h3>
 
-  <button type="button" class="btn btn-warning" [routerLink]="'/starships'">
+  <button type="button" class="btn btn-warning mt-3" [routerLink]="'/starships'">
     Ir a Starships
   </button>
 </div>
