--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
+
+
+
+
 body {
   background-color: #0a0b0b;
+
+  margin: 0; /* Eliminar los márgenes por defecto */
+  padding: 0; /* Eliminar los rellenos por defecto */
+  background-image: url('/assets/background-image.jpg'); /* Ruta de la imagen de fondo */
+  background-size: cover; /* Ajustar el tamaño de la imagen para que cubra toda la pantalla */
+  background-position: center; /* Centrar la imagen en la pantalla */
+  background-repeat: no-repeat; /* Evitar que la imagen se repita */
 }
 
 .account-buttons {
