home comoponent + background pic OK

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,17 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
 
-
-
-
 body {
   background-color: #0a0b0b;
 
   margin: 0; /* Eliminar los márgenes por defecto */
   padding: 0; /* Eliminar los rellenos por defecto */
-  background-image: url('/assets/background-image.jpg'); /* Ruta de la imagen de fondo */
-  background-size: cover; /* Ajustar el tamaño de la imagen para que cubra toda la pantalla */
-  background-position: center; /* Centrar la imagen en la pantalla */
-  background-repeat: no-repeat; /* Evitar que la imagen se repita */
 }
 
 .account-buttons {
@@ -22,9 +15,15 @@ body {
 }
 
 .custom-color {
-  color: #ffc107
+  color: #ffc107;
 }
 .custom-color:hover {
   color: #fff;
+}
 
+.background-image {
+   background-image: url("/assets/inicial-background.jpg");  /* Ruta de la imagen de fondo */
+  background-size: cover; /* Ajustar el tamaño de la imagen para que cubra toda la pantalla */
+  background-position: center; /* Centrar la imagen en la pantalla */
+  background-repeat: no-repeat; /* Evitar que la imagen se repita */
 }
