--- a/src/app.component.html
+++ b/src/app.component.html
@@ -1,71 +1,10 @@
-<div class="container header-container">
-  <div class="container d-flex align-items-center justify-content-center">
-    <img
-      src="/assets/Captura de pantalla 2023-07-11 101021.png"
-      alt="starwars-logo"
-    />
-  </div>
-
-  <header
-    class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom"
-  >
-    <div class="col-md-3 mb-2 mb-md-0">
-      <a href="/" class="d-inline-flex link-body-emphasis text-decoration-none">
-        <svg
-          class="bi"
-          width="40"
-          height="32"
-          role="img"
-          aria-label="Bootstrap"
-        >
-          <use xlink:href="#bootstrap" />
-        </svg>
-      </a>
-    </div>
-
-    <ng-container *ngIf="user">
-      <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-        <li>
-          <a class="nav-item nav-link custom-color" routerLink="/">Home</a>
-        </li>
-        <li>
-          <a class="nav-item nav-link custom-color" routerLink="/starships"
-            >Starships</a
-          >
-        </li>
-      </ul>
-
-      <div class="col-md-3 text-end">
-        <button
-          type="button"
-          class="btn mx-2 account-buttons custom-color"
-          (click)="logout()"
-        >
-          <i class="fa-solid fa-right-from-bracket"></i>
-          Logout
-        </button>
-      </div>
-    </ng-container>
-  </header>
+<div class="container-fluid">
+  <app-header></app-header>
 </div>
 
 <!-- main app container -->
-<div class="container">
+<div class="container-fluid background-image"  >
   <router-outlet></router-outlet>
 </div>
-<!--  <button
-        type="button"
-        class="btn me-2 account-buttons "
-        routerLink="/account/login"
-      >
-        <i class="fa-solid fa-right-to-bracket"></i>
-        Login
-      </button> -->
-<!--  <button
-        type="button"
-        class=" btn account-buttons"
-        routerLink="/account/register"
-      >
-        <i class="fa-solid fa-user-plus"></i>
-        Sign-up
-      </button> -->
+
+
