--- a/src/app/starship/starships/starship.component.css
+++ b/src/app/starship/starships/starship.component.css
@@ -4,17 +4,14 @@
   align-items: center;
   justify-content: center;
   text-align: center;
-  background-color: #0a0b0b;
   color: #aaaaaa;
 }
 
 ul li {
-  background-color: #0a0b0b;
+  background-color: transparent;
   color: #aaaaaa;
   border: none;
 }
-
-
 
 .starship-div {
   background-color: #151515;
@@ -22,11 +19,17 @@ ul li {
   padding-bottom: 17px;
   padding-left: 10px;
   padding-right: 10px;
-
 }
 
-.starship-model {   background-color: #151515;
+.starship-model {
+  background-color: #151515;
   color: #aaaaaa;
   border: none;
+}
 
+.background-image {
+  background-image: url("/assets/background-image.jpg"); /* Ruta de la imagen de fondo */
+  background-size: cover; /* Ajustar el tamaño de la imagen para que cubra toda la pantalla */
+  background-position: center; /* Centrar la imagen en la pantalla */
+  background-repeat: no-repeat; /* Evitar que la imagen se repita */
 }
