--- a/src/app/starship/starships/starships.component.html
+++ b/src/app/starship/starships/starships.component.html
@@ -1,5 +1,6 @@
-<div>
+
   <div class="starships-container">
+    <h1 class="text-warning ">Starships</h1>
     <ul class="list-group">
       <li class="list-group-item" *ngFor="let starship of starships">
         <div class="starship-div">
@@ -20,5 +21,5 @@
       View More
     </button>
   </div>
-</div>
+
 <router-outlet></router-outlet>
