--- a/src/app/ficha/ficha.component.html
+++ b/src/app/ficha/ficha.component.html
@@ -2,7 +2,7 @@
   <div class="row ficha-container" >
     <div class="col-12 d-flex justify-content-center py-3" >
       <div class="card back-image text-white backgound-color">
-        <div class="card-body py-0" style="border: 2px solid green;">
+        <div class="card-body py-0" >
           <div class="row">
             <div class="col-12 d-flex justify-content-center">
               <div class="card border-0 card-child">
@@ -84,10 +84,11 @@
           *ngIf="imagesPilots.length > 0"
           [imagesPilots]="imagesPilots"
         ></app-pilots>
-        <div style="border: 2px solid red;" *ngIf="imagesPilots.length === 0" class="white-text">
+        <div  *ngIf="imagesPilots.length === 0" class="white-text">
           <strong>Pilots: </strong> No pilots available right now
         </div>
         <br />
+        <app-films [filmsAPI]="films"></app-films>
       </div>
     </div>
   </div>
