--- a/src/app/ficha/films/films.component.html
+++ b/src/app/ficha/films/films.component.html
@@ -1,6 +1,6 @@
 <div class="d-flex">
   <p class="text"><strong>Films:</strong></p>
-  <div *ngFor="let film of filmsAPI">
+  <div *ngFor="let film of films">
       <img class="img-film mx-2 p-1 flex-fill" [src]="film" alt="Film Image" />
   </div>
 </div>
